--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,10 @@ img {
 }
 
 .logo {
-    width: 100px;  /* Adjust width as needed */
-    height: auto;  /* Maintain aspect ratio */
+    width: 100px;
+    /* Adjust width as needed */
+    height: auto;
+    /* Maintain aspect ratio */
 }
 
 /* Style rules for header */
@@ -67,10 +69,11 @@ main {
     background-color: #fff;
     margin: 20px auto;
     max-width: 800px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-main h1, main h2 {
+main h1,
+main h2 {
     color: #333;
 }
 
@@ -119,4 +122,92 @@ footer {
 footer a {
     color: black;
     text-decoration: none;
+}
+
+/* contact form css */
+
+
+form {
+    width: 75%;
+    margin: 0;
+}
+
+fieldset {
+    padding: 20px;
+    border: 1px solid #ccc;
+}
+
+legend {
+    font-weight: bold;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+}
+
+input,
+select,
+textarea,
+button {
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+button {
+    width: auto;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.button-container {
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.reset-button {
+    float: right;
+    padding: 10px 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.submit-button {
+    float: right;
+    padding: 10px 20px;
+    background-color: rgb(66, 66, 243);
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.submit-button:hover {
+    background-color: rgb(98, 98, 243);
+}
+
+.reset-button:hover {
+    background-color: #f1550c;
+}
+
+.favorite-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.favorite-button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
 }
